gateway-migration/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homelab-gateway
  namespace: envoy-gateway-system
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.0.0.230
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: webdemoapp-tls
            namespace: envoy-gateway-system
      allowedRoutes:
        namespaces:
          from: All
